bin/testsuite/tests/compiler/src/errors/compiler5920.swg
#global testerror "Err0519"

    func toto(me: s32A)
    {
    }
